About half done with site

--- a/index.html
+++ b/index.html
@@ -6,8 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joseph Quatela - Home</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <p>logo</p>
+        <ol>
+            <a href="#projects-page">
+                <li>Projects</li>
+            </a>
+            <a href="#">
+                <li>Skills</li>
+            </a>
+            <a href="#">
+                <li>Resume</li>
+            </a>
+            <a href="#">
+                <li class="nav-contact">Contact</li>
+            </a>
+        </ol>
+    </nav>
+    <section class="name-page">
+        <script src='./JS/rain.js'></script>
+        <h1>Joseph</h1>
+        <h1>Quatela</h1>
+    </section>
+    <section class="projects-page" id="projects-page">
+        <h1 class="projects-info">A few of my projects...</h1>
+        <div class="cards">
+            <div class="container">
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="p-card-text">
+                            <h1>Project title</h1>
+                            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis reprehenderit modi recusandae molestias consequatur suscipit in, dolore </h2>
+                        </div>
+                        <div class="p-buttons">
+                            <a href="#" class="hosted">Hosted</a>
+                            <a href="#" class="code">Coded</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="p-card-text">
+                            <h1>Project title</h1>
+                            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis reprehenderit modi recusandae molestias consequatur suscipit in, dolore </h2>
+                        </div>
+                        <div class="p-buttons">
+                            <a href="#" class="hosted">Hosted</a>
+                            <a href="#" class="code">Coded</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="p-card-text">
+                            <h1>Project title</h1>
+                            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis reprehenderit modi recusandae molestias consequatur suscipit in, dolore </h2>
+                        </div>
+                        <div class="p-buttons">
+                            <a href="#" class="hosted">Hosted</a>
+                            <a href="#" class="code">Coded</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="github">GitHub</a>
+    </section>
+    <section class="skills-page" id="skills-page">
+        
+    </section>
 </body>
 </html>
