finished skills section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,41 @@
         <a href="#" class="github">GitHub</a>
     </section>
     <section class="skills-page" id="skills-page">
+        <h1 class="skills-header">Some things I'm good at...</h1>
+        <div class="bubble-container">
+            <div class="skills-bubble">
+                <h1>Python</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>Java</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>C++</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>JS</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>Ruby</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>Go</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>Swift</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>HTML</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>CSS</h1>
+            </div>
+            <div class="skills-bubble">
+                <h1>C#</h1>
+            </div>
+        </div>
+    </section>
+    <section class="contact-page">
         
     </section>
 </body>
