--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4f1d690373.js" crossorigin="anonymous"></script>
+    <script defer src='./JS/cards.js'></script>
+    <script defer src='./JS/rain.js'></script>
 </head>
 <body>
     <nav>
-        <p>logo</p>
+        <a href="index.html" class="logo">Home</a>
         <ol>
             <a href="#projects-page">
                 <li>Projects</li>
             </a>
-            <a href="#">
+            <a href="#skills-page">
                 <li>Skills</li>
             </a>
-            <a href="#">
+            <a href="./resources/Joseph Quatela - Resume.pdf " target="_blank" rel="noopener noreferrer">
                 <li>Resume</li>
             </a>
-            <a href="#">
+            <a href="#contact-page">
                 <li class="nav-contact">Contact</li>
             </a>
         </ol>
     </nav>
     <section class="name-page">
-        <script src='./JS/rain.js'></script>
         <h1>Joseph</h1>
         <h1>Quatela</h1>
     </section>
@@ -79,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="github">GitHub</a>
+        <a href="https://github.com/josephquatela/" target="_blank" rel="noopener noreferrer" class="github">GitHub</a>
     </section>
     <section class="skills-page" id="skills-page">
         <h1 class="skills-header">Some things I'm good at...</h1>
@@ -116,8 +118,40 @@
             </div>
         </div>
     </section>
-    <section class="contact-page">
-        
+    <section class="contact-page" id="contact-page">
+        <div class="contact-content">
+            <h1>Joseph Quatela</h1>
+            <h3>Preparing for everything, ready for anything.</h3>
+            <div class="contact-me">
+                <p>Contact me: </p>
+                <div class="contact-buttons">
+                    <div class="c-button-container">
+                        <span class="contact">
+                            <i class="fas fa-envelope-square"></i>
+                        </span>
+                        <a href="mailto: joseph.c.quatela@vanderbilt.edu">Email</a>
+                    </div>
+                    <div class="c-button-container">
+                        <span class="contact">
+                            <i class="fas fa-phone-square-alt"></i>
+                        </span>
+                        <a href="tel: 9545933365">Phone</a>
+                    </div>
+                    <div class="c-button-container">
+                        <span class="contact">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                        <a href="https://www.linkedin.com/in/joeyquatela/" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                    </div>
+                    <div class="c-button-container">
+                        <span class="contact">
+                            <i class="fab fa-twitter-square"></i>
+                        </span>
+                        <a href="https://twitter.com/joey_quatela" target="_blank" rel="noopener noreferrer">Twitter</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
