--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                 <h1>JS</h1>
             </div>
             <div class="skills-bubble">
-                <h1>Ruby</h1>
+                <h1>Unity</h1>
             </div>
             <div class="skills-bubble">
-                <h1>Go</h1>
+                <h1>Photoshop</h1>
             </div>
             <div class="skills-bubble">
                 <h1>Swift</h1>
