--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
         <h1 class="projects-info">A few of my projects...</h1>
         <div class="cards">
             <div class="container">
-                <div class="project-card">
+                <div class="project-card" id='project-1'>
                     <div class="card-content">
                         <div class="p-card-text">
-                            <h1>Project title</h1>
-                            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis reprehenderit modi recusandae molestias consequatur suscipit in, dolore </h2>
+                            <h1>Ravenous</h1>
+                            <h2>This project used ReactJS to create a Yelp-like web-app using the Yelp API, integrating JS, HTML, and CSS. Try searching for your favorite food in your favorite city!</h2>
                         </div>
                         <div class="p-buttons">
                             
-                            <a href="#" class="code">Code</a>
+                            <a href="https://github.com/josephquatela/ravenousProject" target="_blank" rel="noopener noreferrer" class="code">Code</a>
                         </div>
                     </div>
                 </div>
