--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#skills-page">
                 <li>Skills</li>
             </a>
-            <a href="./resources/Joseph Quatela - Resume.pdf " target="_blank" rel="noopener noreferrer">
+            <a href="./resources/Software Engineer.pdf" target="_blank" rel="noopener noreferrer">
                 <li>Resume</li>
             </a>
             <a href="#contact-page">
@@ -67,15 +67,15 @@
                 </div>
             </div>
             <div class="container">
-                <div class="project-card">
+                <div class="project-card" id="project-3">
                     <div class="card-content">
                         <div class="p-card-text">
-                            <h1>Project title</h1>
-                            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis reprehenderit modi recusandae molestias consequatur suscipit in, dolore </h2>
+                            <h1>Jamming</h1>
+                            <h2>This web-app was built using ReactJS and offers users the ability to create playlists in their own environment. Search songs, add them to a custom playlist, and upload it to spotify all on one page!</h2>
                         </div>
                         <div class="p-buttons">
-                            
-                            <a href="#" class="code">Code</a>
+                            <a href="http://quatelajammingapp.surge.sh/" target="_blank" rel="noopener noreferrer" class="host">Host</a>
+                            <a href="https://github.com/josephquatela/jammingapp" target="_blank" rel="noopener noreferrer" class="code">Code</a>
                         </div>
                     </div>
                 </div>
