--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <h2>This project used ReactJS to create a Yelp-like web-app using the Yelp API, integrating JS, HTML, and CSS. Try searching for your favorite food in your favorite city!</h2>
                         </div>
                         <div class="p-buttons">
-                            
+                            <a href="#" target="_blank" rel="noopener noreferrer" class="host">Host</a>
                             <a href="https://github.com/josephquatela/ravenousProject" target="_blank" rel="noopener noreferrer" class="code">Code</a>
                         </div>
                     </div>
