--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="project-card" id="project-4">
+                    <div class="card-content">
+                        <div class="p-card-text">
+                            <h1>Lost?</h1>
+                            <h2>This mini-game was built in the Unity Game engine. It helped teach a heap-load of concepts, and especially aided in my object-oriented programming and C# skills. Happy hopping!</h2>
+                        </div>
+                        <div class="p-buttons">
+                            <a href="https://play.unity.com/mg/other/lost-ese7" target="_blank" rel="noopener noreferrer" class="host">Play</a>
+                            <a href="https://github.com/josephquatela/jammingapp" target="_blank" rel="noopener noreferrer" class="code">Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <a href="https://github.com/josephquatela/" target="_blank" rel="noopener noreferrer" class="github">GitHub</a>
     </section>
