--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#skills-page">
                 <li>Skills</li>
             </a>
-            <a href="./resources/Software Engineer.pdf" target="_blank" rel="noopener noreferrer">
+            <a href="./resources/Software Engineer (1).pdf" target="_blank" rel="noopener noreferrer">
                 <li>Resume</li>
             </a>
             <a href="#contact-page">
