--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                 <div class="project-card" id="project-4">
                     <div class="card-content">
                         <div class="p-card-text">
-                            <h1>Lost?</h1>
-                            <h2>This mini-game was built in the Unity Game engine. It helped teach a heap-load of concepts, and especially aided in my object-oriented programming and C# skills. Happy hopping!</h2>
+                            <h1>Restaurant Query App</h1>
+                            <h2>This web query search tool was built as part of an internship with open avenues foundation. Try adding metrics, changing the dates, or filtering by restraurant.</h2>
                         </div>
                         <div class="p-buttons">
-                            <a href="https://play.unity.com/mg/other/lost-ese7" target="_blank" rel="noopener noreferrer" class="host">Play</a>
-                            <a href="https://github.com/josephquatela/Lost-game-scripts" target="_blank" rel="noopener noreferrer" class="code">Code</a>
+                            <a href="https://r-query-oaf-jq.surge.sh/" target="_blank" rel="noopener noreferrer" class="host">Host</a>
+                            <a href="https://github.com/josephquatela/restaurant-query-app-OAF" target="_blank" rel="noopener noreferrer" class="code">Code</a>
                         </div>
                     </div>
                 </div>
